<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">OBDroid</string>

  <string name="preferences">Preferences</string>
  <string name="reset">Reset</string>

  <string name="text_preferences">Text</string>

  <string name="title_fontsize_preference">Font size</string>
  <string name="summary_fontsize_preference">Choose character height in points.</string>
  <string name="dialog_title_fontsize_preference">Font size</string>

  <string name="title_color_preference">Colors</string>
  <string name="summary_color_preference">Choose text color.</string>
  <string name="dialog_title_color_preference">Text color</string>

  <string name="keyboard_preferences">Keyboard</string>

  <string name="default_value_fontsize_preference">10</string>
  <string name="default_value_color_preference">2</string>
  <string name="default_value_controlkey_preference">0</string>

</resources>
