<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="@string/text_preferences">

    <ListPreference
        android:key="fontsize"
        android:defaultValue="@string/default_value_fontsize_preference"
        android:title="@string/title_fontsize_preference"
        android:summary="@string/summary_fontsize_preference"
        android:entries="@array/entries_fontsize_preference"
        android:entryValues="@array/entryvalues_fontsize_preference"
        android:dialogTitle="@string/dialog_title_fontsize_preference"
        />

    <ListPreference
        android:key="color"
        android:defaultValue="@string/default_value_color_preference"
        android:title="@string/title_color_preference"
        android:summary="@string/summary_color_preference"
        android:entries="@array/entries_color_preference"
        android:entryValues="@array/entryvalues_color_preference"
        android:dialogTitle="@string/dialog_title_color_preference"
        />

  </PreferenceCategory>

</PreferenceScreen>
